--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "bugs": {
     "url": "https://github.com/kasra-nejad/portfolio/issues"
   },
-  "homepage": "https://github.com/kasra-nejad/portfolio#readme",
+  "homepage": "https://github.com/kasra-nejad/portfolio",
   "devDependencies": {
     "browser-sync": "^2.24.4",
+    "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-sass": "^4.0.1",
     "sass": "^1.3.2"
   }
