--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My portfolio",
   "main": "index.html",
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "deploy": "gh-pages -d src"
   },
   "repository": {
     "type": "git",
