--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-sync": "^2.24.4",
     "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
     "sass": "^1.3.2"
   }
